--- a/componentes/css/Curso.css
+++ b/componentes/css/Curso.css
@@ -1,5 +1,5 @@
 @keyframes shake {
-    0% { transform: translate(0, 0); }
+    0% { transform: translate(-2px, 2px); }
     10% { transform: translate(-2px, -2px); }
     20% { transform: translate(2px, -2px); }
     30% { transform: translate(-2px, 2px); }
@@ -9,18 +9,45 @@
     70% { transform: translate(-2px, 2px); }
     80% { transform: translate(2px, 2px); }
     90% { transform: translate(-2px, -2px); }
-    100% { transform: translate(0, 0); }
+    100% { transform: translate(2px, -2px); }
 }
 .contenedor-curso{
-    background-color: rgb(244, 247, 251); 
+    background-color: rgb(244, 247, 251);
+    position: relative;
 }
 
 .contenedor-curso:hover{
     position: relative;
+    z-index: 20;
     bottom: -12px;
     transition: all 0.5s ;
     background-color: rgb(229, 235, 237);
-    animation: shake 0.5s ease-in-out forwards; /* Aplica la animación al hacer hover */
+    animation: shake 5s ease-in-out forwards; /* Aplica la animación al hacer hover */
+}
+.inscripcion-curso{
+    position: relative;
+    bottom: 65%;
+    background-color: blue;
+    width: 16vh;
+    left: 23px;
+    opacity: 0;
+    height: 5vh;
+    z-index: 1;
+    border-radius: 0.5vh;
+    transition: all 0.3s;
+}
+.inscripcion-curso:hover{
+    box-shadow: 1px 9px 4px 7px rgb(62, 71, 73);
+    visibility: visible;
+    position: relative;
+    margin: auto;
+    left: 13px;
+    bottom: 10vh;
+    background-color: blue;
+    height: 20vh;
+    opacity: 1;
+    z-index: 40;
+    animation-play-state: paused;
 }
 
 /* .nombre-curso,.maestro-curso,.puntaje{
