--- a/src/App.css
+++ b/src/App.css
@@ -46,10 +46,13 @@ h2{
   color: rgb(0, 0, 0);
 }
 .contenedor-principal{
-  z-index: 8;
+  position: relative;
+  z-index: 1;
   padding-top: 200px;
 }
 .contenedor-cursos{
+  position: relative;
+  z-index: 1;
   width: 60%;
   min-height:400px;
   max-height: 600px;
@@ -61,7 +64,6 @@ h2{
   gap:3%;
   overflow-y: scroll;
   overflow-x: hidden;
-  
   animation: shake 16s ease-in-out infinite;
   animation: fade 9s infinite alternate;
   box-shadow:3px 10px 9px ;
